@@ -10,7 +10,9 @@ import java.util.*;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.eclipse.core.runtime.*;
 import org.eclipse.core.runtime.CoreException;
+import org.eclipse.core.runtime.IPath;
 import org.eclipse.update.core.model.*;
 import org.eclipse.update.internal.core.*;
 import org.eclipse.update.internal.core.Policy;
@@ -30,12 +32,71 @@ import org.eclipse.update.internal.core.UpdateManagerPlugin;
 public abstract class FeatureContentProvider
 	implements IFeatureContentProvider {
 
+	/**
+	 * 
+	 */
+	public class FileFilter {
+
+		private String filterString = null;
+		private IPath filterPath = null;
+		
+		/**
+		 * Constructor for FileFilter.
+		 */
+		public FileFilter(String filter) {
+			super();
+			this.filterString = filter;
+			this.filterPath = new Path(filter);
+		}
+
+
+
+
+		/**
+		 * returns true if the name matches the rule
+		 */
+		public boolean accept(String name) {
+			
+			if (name==null) return false;
+			
+			// no '*' pattern matching
+			// must be equals
+			IPath namePath = new Path(name);
+			if (filterPath.lastSegment().indexOf('*')==-1) {
+				return filterPath.equals(namePath);
+			}
+			
+			// check same file extension  if extension exists (a.txt/*.txt)
+			// or same file name (a.txt,a.*)
+			String extension = filterPath.getFileExtension();
+			if (!extension.equals("*")){
+				if (!extension.equalsIgnoreCase(namePath.getFileExtension())) return false;
+			} else {
+				IPath noExtension = filterPath.removeFileExtension();
+				String fileName = noExtension.lastSegment();
+				if (!fileName.equals("*")){
+					if (!namePath.lastSegment().startsWith(fileName))
+						return false;
+				}
+			}
+			
+			// check same path
+			IPath p1 = namePath.removeLastSegments(1);
+			IPath p2 = filterPath.removeLastSegments(1);
+			return p1.equals(p2);
+		}
+
+	}
+	
+	
+	
 	private URL base;
 	private IFeature feature;
 	private File tmpDir; // local work area for each provider
 	public static final String JAR_EXTENSION = ".jar"; //$NON-NLS-1$	
 	
-	private static final String DOT_PERMISSIONS = ".permissions";
+	private static final String DOT_PERMISSIONS = "permissions.properties";
+	private static final String EXECUTABLES = "permissions.executable";
 	
 	// lock
 	private final static Object lock = new Object();
@@ -319,12 +380,38 @@ public abstract class FeatureContentProvider
 			ContentReference contentReference = references[i];
 			String id = contentReference.getIdentifier();
 			Object value = null;
-			if ((value = permissions.get(id))!=null){
+			if ((value = matchesOneRule(id,permissions))!=null){
 				Integer permission = (Integer)value;
 				contentReference.setPermission(permission.intValue());
 			}
 		}
 	}
+
+	/**
+	 * Returns the value of the matching rule or <code>null</code> if none found.
+	 * A rule is matched if the id is equals to a key, or if the id is resolved by a key.
+	 * if the id is <code>/path/file.txt</code> it is resolved by <code>/path/*</code>
+	 * or <code>/path/*.txt</code>
+	 * 
+	 * @param id the identifier
+	 * @param permissions list of rules
+	 * @return Object the value of the matcing rule or <code>null</code>
+	 */
+	private Object matchesOneRule(String id, Map permissions) {
+		Object result;
+		
+		Set keySet = permissions.keySet();
+		Iterator iter = keySet.iterator();
+		while (iter.hasNext()) {
+			FileFilter rule = (FileFilter) iter.next();
+			if (rule.accept(id)){
+				return permissions.get(rule);
+			}
+		}
+		
+		return null;
+	}
+
 	
 	/*
 	 * returns the permission MAP 
@@ -344,37 +431,21 @@ public abstract class FeatureContentProvider
 		}
 		if (notfound) return result;
 		
-		// parse permissions file
-		BufferedReader in = null;
+		Properties prop = new Properties();
 		try {
-			in = new BufferedReader(new InputStreamReader(permissionReference.getInputStream()));
+			prop.load(permissionReference.getInputStream());
 		} catch (IOException e){
-			// TODO
-			UpdateManagerPlugin.warn("Unable to access .permissions",e);
+			UpdateManagerPlugin.warn("",e);
 		}
 		
-		// TODO How about UTF ???
-		if (in!=null){
-			try {
-				String line = in.readLine();
-				StringTokenizer tokenizer ;
-				while(line!=null){
-					tokenizer = new StringTokenizer(line,"=");
-					String path = tokenizer.nextToken();
-					Integer permission = new Integer(ContentReference.DEFAULT_PERMISSION);
-					if (tokenizer.hasMoreTokens()){
-						permission = Integer.valueOf(tokenizer.nextToken());
-					}	
-					result.put(path,permission);
-					line=in.readLine();
-				}
-			} catch (IOException e){
-				//TODO
-				UpdateManagerPlugin.warn("Unable to read .permissions",e);
-			} finally {
-				try {in.close();} catch (Exception exc){};
-			} 
+		String executables = prop.getProperty(EXECUTABLES);
+		StringTokenizer tokenizer = new StringTokenizer(executables,",");
+		Integer defaultExecutablePermission = new Integer(ContentReference.DEFAULT_EXECUTABLE_PERMISSION);
+		while (tokenizer.hasMoreTokens()){
+			FileFilter filter = new FileFilter(tokenizer.nextToken());
+			result.put(filter,defaultExecutablePermission);
 		}
-		return result;
+		
+		return prop;
 	}
 }
